# newcpp

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  main.cpp
src/: filewriter.cpp  filewriter.hpp  main.cpp  templates.cpp  templates.hpp
